# app-csrf

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: settings.py  urls.py
clinicas/: admin.py  apps.py  forms.py  models.py  views.py
clinicas/migrations/: 0001_initial.py  0002_paciente_genero.py  0002_usuario_foto_perfil.py  0003_historialmedico.py  0004_doctor_apellido_doctor_correo_doctor_nacimiento_and_more.py  0005_historialmedico_consulta.py
clinicas/templates/: base.html
clinicas/templates/forms/: consulta_form.html  doctor_form.html  historial_form.html
clinicas/templates/paciente/: paciente_detalle.html
clinicas/templates/pdf/: template_pdf.html
clinicas/templates/usuario/: index.html  (+1 more)
ia/: admin.py  assist_agent.py  data_analysis_agent.py  forms.py  ia_agent.py  models.py  stock_agent.py  views.py
ia/migrations/: 0001_initial.py  0002_laboratorio_medicamento_movimientostock.py  0003_alertconfiguration.py
templates/: base.html  cambiar_pass.html  consulta_form.html  doctor_form.html  home.html  index.html  login.html  paciente_form.html  perfil.html  register.html
templates/auth/: login.html
templates/chat/: chatbot.html  history.html
templates/forms/: doctor_form.html  historial_form.html  medicamento_form.html  movimiento_form.html  paciente_form.html
templates/ia/: chatbot.html  dashboard.html  history.html  medication_stock.html  patient_analysis.html
templates/pdf/: analysis_pdf.html
templates/stock/: alert_config.html  medicamento_historial.html  medicamento_list.html
templates/usuario/: cambiar_pass.html  index.html
(+1 files in other folders)
